Update .gitignore: add entries for Visual Studio Code, local history, notes, and Snyk security

--- a/.gitignore
+++ b/.gitignore
@@ -168,4 +168,16 @@ cython_debug/
 #.idea/
 
 # Visual Studio Code
-.vscode
+.vscode/
+
+# Local History for Visual Studio Code
+.history/
+
+# Visual Studio remote
+.remote/
+
+# My notes 
+notes.txt
+
+# Snyk Security
+.dcignore
