--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,7 @@ repos:
     rev: v1.37.1
     hooks:
       - id: yamllint
+  - repo: https://github.com/ansible/ansible-lint
+    rev: v25.4.0
+    hooks:
+      - id: ansible-lint
