Maintenance of repository ...  (#4)
* Adjusting tasks and handler.

* Refactor GitHub Actions workflows: update ansible-lint.yml and add pull-request-assignee.yml; remove CODEOWNERS, LICENSE, and SECURITY.md files.

* Fix formatting in pull-request-assignee.yml for consistency

* Update .ansible-lint configuration: add new exclude paths, enable additional rules, and adjust verbosity settings

* Fix syntax in ansible-lint.yml: remove extra quotes from release branch patterns

* Update README.md: add badges for Contributor Covenant, License, GitHub Release, commit activity, and contributors

* Update README.md

Signed-off-by: David Burel <148688225+dafneb@users.noreply.github.com>

* Update .gitignore: add entries for Visual Studio Code, local history, notes, and Snyk security

* Add configuration files and workflows for GitHub Actions, including CODEOWNERS, Dependabot, CodeQL, and pre-commit hooks; update README and license; fix minor syntax issues in YAML files.

* Update .gitignore and .pre-commit-config.yaml to include Ansible linting; enhance .yamllint rules for better YAML validation

---------

Signed-off-by: David Burel <148688225+dafneb@users.noreply.github.com>

--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -1,34 +1,30 @@
-# This is a basic workflow to help you get started with Actions
-name: ansible-lint
+name: Ansible Lint
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["main", "stable", "release/v*"]
+    branches:
+      - 'main'
+      - 'development'
+      - 'stable'
+      - 'release/v*'
+      - 'feature/*'
+      - 'issue/*'
+    paths-ignore:
+      - '.github/workflows/*'
+      - '**/*.md'
+      - '**/*.txt'
   pull_request:
-    branches: ["main", "stable", "release/v*"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches:
+      - 'main'
+      - 'stable'
+      - 'development'
+      - 'release/v*'
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    name: Ansible Lint # Naming the build is important to use it as a status check
-    # The type of runner that the job will run on
-    runs-on: ubuntu-24.04
+permissions:
+  contents: read
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-      - name: Run ansible-lint
-        uses: ansible/ansible-lint@main
-        # optional (see below):
-        with:
-          args: ""
-          setup_python: "true"
-          working_directory: ""
-          requirements_file: ""
+jobs:
+  build:
+    name: Ansible Lint
+    uses: dafneb/.github/.github/workflows/ansible-lint.yml@57b417cb809cc076c28f90e6573ab9d80ecebb3c
